# equitransport

./: .gitignore  README.md  design.qmd  pyproject.toml
.github/workflows/: tests.yml
scripts/: run_demo.py
src/equitransport/: __init__.py  access.py  data.py  equity.py  plotting.py  utils.py
src/equitransport/data/2023-sa2/: statistical-area-2-2023-generalised.txt
src/equitransport/data/gtfs/: calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  stops.txt  trips.txt
src/equitransport_akl/: __init__.py
src/equitransport_akl/data/: NZDep2023.csv  NZDep2023.xlsx  ~$NZDep2023.xlsx
tests/: test_equitransport.py
