[project]
name = "equitransport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zhengyi Yan", email = "zyan435@aucklanduni.ac.nz" }, 
    { name = "Ruoxuan Huang", email = "rhua798@aucklanduni.ac.nz" }
]
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.3",
    "pandas>=3.0.3",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
